fix: Adjust spacing and margins in waybar configuration and update font size and border radius in style

--- a/components/waybar/style.css
+++ b/components/waybar/style.css
@@ -3,7 +3,7 @@
   font-weight: normal;
   min-height: 0;
   /* set font-size to 100% if font scaling is set to 1.00 using nwg-look */
-  font-size: 14px; /* 98% */
+  font-size: 12px; /* 98% */
   font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';
 }
 
@@ -13,7 +13,7 @@ window#waybar {
   color: #ffffff;
   transition-property: background-color;
   transition-duration: 0.5s;
-  border-radius: 10px;
+  border-radius: 0px;
 }
 
 window#waybar.hidden {
